Fix cover image overflow

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,5 @@
 .image {
-  width: 100vw;
+  width: 100%;
   max-height: 320px;
   object-fit: cover;
 }
